# backtest-engine

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
backtest_engine/: __init__.py  _results.py  _types.py  bug_guard.py  core.py  costs.py  data.py  gatekeeper.py  indicators.py  montecarlo.py  preflight.py  report.py  strategy_builder.py  utils.py  validation.py
examples/: example_strategy.py  gatekeeper_pipeline.py  report_demo.py
examples/gold_rollover/: stage1_5year.py  stage1_data_quality.py  with_strategy_builder.py
examples/rsi_reversal/: level1_basic.py  level1_from_api.py  level2_optimize.py  level3_gatekeeper.py  level4_filters.py
tests/: conftest.py  test_bug_guard.py  test_core.py  test_costs.py  test_data.py  test_gatekeeper.py  test_hires.py  test_indicators.py  test_montecarlo.py  test_preflight.py  test_report.py  test_strategy_builder.py  test_stress.py  test_validation.py
