[project]
name = "backtest-engine"
version = "0.5.0"
description = "Numba-accelerated backtesting engine for trading strategies"
requires-python = ">=3.12"
license = "GPL-3.0-only"
readme = "README.md"
authors = [
    {name = "backtest-engine contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=2.2,<2.4",
    "numba>=0.61",
    "pandas>=2.2",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Repository = "https://github.com/bartonguestier1725-collab/backtest-engine"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::backtest_engine.preflight.BacktestQualityWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
